--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>Carosello Mono Array</h1>
+  <h1>Carosello Array di Oggetti</h1>
   <div class="container">
 
     <div class="items">
